// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`converts from 1`] = `
"import style9 from 'style9';
\\"lbvhnp\\";"
`;

exports[`converts from 2`] = `"@keyframes lbvhnp{0%{color:blue}}"`;

exports[`converts to 1`] = `
"import style9 from 'style9';
\\"1yehff3\\";"
`;

exports[`converts to 2`] = `"@keyframes 1yehff3{100%{color:blue}}"`;

exports[`supports keyframes 1`] = `
"import style9 from 'style9';
\\"5c3aul\\";"
`;

exports[`supports keyframes 2`] = `"@keyframes 5c3aul{0%{color:blue}100%}}"`;

exports[`supports settings animationName directly 1`] = `
"import style9 from 'style9';
const styles = {
  default: {
    animationName: \\"9986pv\\"
  }
};"
`;

exports[`supports settings animationName directly 2`] = `".9986pv{animation-name:1px3r7c}@keyframes 1px3r7c{0%{opacity:0}}"`;
